--- a/FreshdeskTicket1.html
+++ b/FreshdeskTicket1.html
@@ -15,7 +15,7 @@
     <script src="Freshdesk.js"></script>
 
 
-<div class="ticket"> <div class="button" id="ticketButton"><a href="Freshdesk.html" style="color:white;"><i class="fas fa-ticket-alt"></i></a></div></div>
+<div class="ticket"> <div class="button" id="ticketButton"><a href="index.html" style="color:white;"><i class="fas fa-ticket-alt"></i></a></div></div>
 
 <div class="margin1"><div class="heading1">All Tickets> 1</div></div>
 <div class="margin2"><div class="heading2">Margin 2</div></div>
